# juce-opengl-example

./: CMakeLists.txt
include/: CurveShaders.h  OpenGLComponent.h  OpenGLEditor.h  PluginEditor.h  PluginProcessor.h  TriangleTestComponent.h
src/: PluginEditor.cpp  PluginProcessor.cpp
